--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -42,7 +42,7 @@ body {
 
 .tm-section-1 {
   height: 750px;
-  background-image: url(../img/spot-bg-01.jpg);
+  background-image: url(../img/01.jpeg);
   background-size: cover;
   -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);
   clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);
@@ -53,7 +53,7 @@ body {
 
 .tm-section-3 {
   height: 790px;
-  background-image: url(../img/spot-bg-02.jpg);
+  background-image: url(../img/04.jpg);
   background-size: cover;
   -webkit-clip-path: polygon(0px 0px, 100% 14%, 100% 86%, 0px 100%);
   clip-path: polygon(0px 0px, 100% 14%, 100% 86%, 0px 100%);
